syntax = "proto3";

package transport_catalogue_serialize;

message RoutingSettings {
    uint32 bus_wait_time = 1;
    uint32 bus_velocity = 2;
}

message Edge {
    uint32 from_id = 1;
    uint32 to_id = 2;
    uint32 span_count = 3;
    string bus_name = 4;
    double weight = 5;
}

message DirectedWeightedGraph {
    repeated Edge edges = 1;
}